# table_seating_ga

./: .gitignore  .travis.yml  CMakeLists.txt
src/: CMakeLists.txt  Individual.cpp  Individual.h  config.h  dll.h  functions.h  main.cpp
test/: CMakeLists.txt  main.cpp
